[project]
name = "sa-agentos-server"
version = "0.1.0"
description = "SA-AgentOS Python HTTP Server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

